crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__patterns__validate_bytes_preserves_original_data.snap
---
source: crates/nash-codegen/src/build/tests/source/patterns.rs
description: "module Main exposing (..)\nimport Data exposing (ToData, Validate)\nmain : Bytes\nmain = validate (toData (Builtin.bData #\"ff\"))\n"
---
--- unoptimized Core
let validate#2 : Data -> Bytes = \value#5 : Data -> let candidate#6 : Bytes = (\coerce#8 : Data -> coerce#8) value#5 in
let destruct#7 : bytes = unBData candidate#6 in
candidate#6 in
let toData#3 : 'erased -> Data = \coerce#9 : 'erased -> coerce#9 in
let fromBytes#4 : bytes -> bytes = \value#10 : bytes -> value#10 in
let main#1 : Bytes = validate#2 (toData#3 (bData (fromBytes#4 (con bytestring #ff)))) in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam validate_2
    [(lam toData_3
      [(lam fromBytes_4
        [(lam main_1 main_1)
          [validate_2 [toData_3 [(builtin bData) [fromBytes_4 (con bytestring #ff)]]]]])
        (lam value_10 value_10)])
      (lam coerce_9 coerce_9)])
    (lam value_5
      [(lam candidate_6 [(lam destruct_7 candidate_6) [(builtin unBData) candidate_6]])
        [(lam coerce_8 coerce_8) value_5]])])
--- optimized Core
(con data (B #ff))
--- optimized UPLC
(program 1.1.0 (con data (B #ff)))
--- result
(con data (B #ff))
--- logs
[]
--- budget
cpu: 591425, memory: 3664
