crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__patterns__validate_int_preserves_original_data.snap
---
source: crates/nash-codegen/src/build/tests/source/patterns.rs
description: "module Main exposing (..)\nimport Data exposing (ToData, Validate)\nmain : Int\nmain = validate (toData (Builtin.iData 42))\n"
---
--- unoptimized Core
let validate#2 : Data -> Int = \value#5 : Data -> let candidate#6 : Int = (\coerce#8 : Data -> coerce#8) value#5 in
let destruct#7 : int = unIData candidate#6 in
candidate#6 in
let toData#3 : 'erased -> Data = \coerce#9 : 'erased -> coerce#9 in
let fromInt#4 : int -> int = \value#10 : int -> value#10 in
let main#1 : Int = validate#2 (toData#3 (iData (fromInt#4 42))) in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam validate_2
    [(lam toData_3
      [(lam fromInt_4
        [(lam main_1 main_1)
          [validate_2 [toData_3 [(builtin iData) [fromInt_4 (con integer 42)]]]]])
        (lam value_10 value_10)])
      (lam coerce_9 coerce_9)])
    (lam value_5
      [(lam candidate_6 [(lam destruct_7 candidate_6) [(builtin unIData) candidate_6]])
        [(lam coerce_8 coerce_8) value_5]])])
--- optimized Core
(con data (I 42))
--- optimized UPLC
(program 1.1.0 (con data (I 42)))
--- result
(con data (I 42))
--- logs
[]
--- budget
cpu: 596143, memory: 3664
