crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__patterns__validate_list_rejects_wrong_element.snap
---
source: crates/nash-codegen/src/build/tests/source/patterns.rs
description: "module Main exposing (..)\nimport Data exposing (ToData, Validate)\nmain : List Int\nmain = validate (toData (Builtin.listData [Builtin.bData #\"ff\"]))\n"
---
--- unoptimized Core
let applyForward#7 : 'erased -> ('erased -> 'erased) -> 'erased = \x#13 : 'erased (f#14 : 'erased -> 'erased) -> f#14 x#13 in
letrec
  mapList#8 : ('erased -> Data) -> list 'erased -> list Data [static [0]] = \(f#15 : 'erased -> Data) values#16 : list 'erased -> let match#19 : list 'erased = values#16 in
  case@List match#19 of
    Nil -> (con (list data) [])
    Cons field#20 field#21 -> let first#17 : 'erased = field#20 in
    let rest#18 : list 'erased = field#21 in
    mkCons (f#15 first#17) (mapList#8 f#15 rest#18)
in
let validate#9 : Data -> Int = \value#22 : Data -> let candidate#23 : Int = (\coerce#25 : Data -> coerce#25) value#22 in
let destruct#24 : int = unIData candidate#23 in
candidate#23 in
let validate#2 : Data -> List Data = \value#5 : Data -> let candidate#6 : List Data = (\coerce#10 : Data -> coerce#10) value#5 in
applyForward#7 (applyForward#7 (applyForward#7 candidate#6 unListData) (mapList#8 validate#9)) listData in
let toData#3 : 'erased -> Data = \coerce#11 : 'erased -> coerce#11 in
let fromBytes#4 : bytes -> bytes = \value#12 : bytes -> value#12 in
let main#1 : List Int = validate#2 (toData#3 (listData (mkCons (bData (fromBytes#4 (con bytestring #ff))) (con (list data) [])))) in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam applyForward_7
    [(lam mapList_8
      [(lam validate_9
        [(lam validate_2
          [(lam toData_3
            [(lam fromBytes_4
              [(lam main_1 main_1)
                [validate_2
                  [toData_3
                    [(builtin listData)
                      [[(force (builtin mkCons)) [(builtin bData) [fromBytes_4 (con bytestring #ff)]]]
                        (con (list data) [])]]]]])
              (lam value_12 value_12)])
            (lam coerce_11 coerce_11)])
          (lam value_5
            [(lam candidate_6
              [[applyForward_7
                [[applyForward_7 [[applyForward_7 candidate_6] (builtin unListData)]]
                  [mapList_8 validate_9]]]
                (builtin listData)])
              [(lam coerce_10 coerce_10) value_5]])])
        (lam value_22
          [(lam candidate_23
            [(lam destruct_24 candidate_23) [(builtin unIData) candidate_23]])
            [(lam coerce_25 coerce_25) value_22]])])
      (lam f_15
        (lam values_16
          [[(lam self_26 [self_26 self_26])
            (lam self_26
              (lam values_16
                [(lam match_19
                  (case
                    match_19
                    (lam field_20
                      (lam field_21
                        [(lam first_17
                          [(lam rest_18
                            [[(force (builtin mkCons)) [f_15 first_17]] [[self_26 self_26] rest_18]])
                            field_21])
                          field_20]))
                    (con (list data) [])))
                  values_16]))]
            values_16]))])
    (lam x_13 (lam f_14 [f_14 x_13]))])
--- optimized Core
let applyForward#28 : 'erased -> ('erased -> 'erased) -> 'erased = \x#26 : 'erased (f#27 : 'erased -> 'erased) -> f#27 x#26 in
let anf#55 : list Data = applyForward#28 (con data (List [B #ff])) unListData in
let anf#56 : (list Data -> list Data) -> list Data = applyForward#28 anf#55 in
let anf#58 : list Data = anf#56 (\values#31 : list 'erased -> letrec
  worker#52 : list 'erased -> list Data [static []] = \values#51 : list 'erased -> case@List values#51 of
    Nil -> (con (list data) [])
    Cons field#33 field#34 -> let destruct#40 : int = unIData field#33 in
    let anf#54 : list Data = worker#52 field#34 in
    mkCons field#33 anf#54
in
worker#52 values#31) in
applyForward#28 anf#58 listData
--- optimized UPLC
(program 1.1.0
  [(lam builtin_18
    [(lam applyForward_5
      [(lam anf_6
        [(lam anf_7
          [(lam anf_17 [[applyForward_5 anf_17] (builtin listData)])
            [anf_7
              (lam values_8
                [(lam worker_16 [worker_16 values_8])
                  [(lam self_9 [self_9 self_9])
                    (lam self_10
                      (lam values_11
                        (case
                          values_11
                          (lam field_12
                            (lam field_13
                              [(lam destruct_14
                                [(lam anf_15 [[builtin_18 field_12] anf_15]) [[self_10 self_10] field_13]])
                                [(builtin unIData) field_12]]))
                          (con (list data) []))))]])]])
          [applyForward_5 anf_6]])
        [[applyForward_5 (con data (List [B #ff]))] (builtin unListData)]])
      (lam x_3 (lam f_4 [f_4 x_3]))])
    (force (builtin mkCons))])
--- result
error: Runtime(MalFormedData(ByteString([255])))
--- logs
[]
--- budget
cpu: 143430, memory: 228
