crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__patterns__validate_map_rejects_wrong_key.snap
---
source: crates/nash-codegen/src/build/tests/source/patterns.rs
description: "module Main exposing (..)\nimport Data exposing (ToData, Validate)\nmain : Map Int Bytes\nmain = validate (toData (Builtin.mapData [Builtin.mkPairData (Builtin.bData #\"aa\") (Builtin.bData #\"bb\")]))\n"
---
--- unoptimized Core
let applyForward#7 : 'erased -> ('erased -> 'erased) -> 'erased = \x#13 : 'erased (f#14 : 'erased -> 'erased) -> f#14 x#13 in
letrec
  mapList#8 : ('erased -> pair Data Data) -> list 'erased -> list (pair Data Data) [static [0]] = \(f#15 : 'erased -> pair Data Data) values#16 : list 'erased -> let match#19 : list 'erased = values#16 in
  case@List match#19 of
    Nil -> (con (list (pair data data)) [])
    Cons field#20 field#21 -> let first#17 : 'erased = field#20 in
    let rest#18 : list 'erased = field#21 in
    mkCons (f#15 first#17) (mapList#8 f#15 rest#18)
in
let validate#25 : Data -> Int = \value#30 : Data -> let candidate#31 : Int = (\coerce#33 : Data -> coerce#33) value#30 in
let destruct#32 : int = unIData candidate#31 in
candidate#31 in
let validate#26 : Data -> Bytes = \value#34 : Data -> let candidate#35 : Bytes = (\coerce#37 : Data -> coerce#37) value#34 in
let destruct#36 : bytes = unBData candidate#35 in
candidate#35 in
let pairValidate#9 : pair Data Data -> pair Data Data = \arg#22 : pair Data Data -> let match#27 : pair Data Data = arg#22 in
case@Pair match#27 of
  Pair field#28 field#29 -> let key#23 : Data = field#28 in
  let value#24 : Data = field#29 in
  mkPairData (validate#25 key#23) (validate#26 value#24) in
let validate#2 : Data -> Map Data Data = \value#5 : Data -> let candidate#6 : Map Data Data = (\coerce#10 : Data -> coerce#10) value#5 in
applyForward#7 (applyForward#7 (applyForward#7 candidate#6 unMapData) (mapList#8 pairValidate#9)) mapData in
let toData#3 : 'erased -> Data = \coerce#11 : 'erased -> coerce#11 in
let fromBytes#4 : bytes -> bytes = \value#12 : bytes -> value#12 in
let main#1 : Map Int Bytes = validate#2 (toData#3 (mapData (mkCons (mkPairData (bData (fromBytes#4 (con bytestring #aa))) (bData (fromBytes#4 (con bytestring #bb)))) (con (list (pair data data)) [])))) in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam applyForward_7
    [(lam mapList_8
      [(lam validate_25
        [(lam validate_26
          [(lam pairValidate_9
            [(lam validate_2
              [(lam toData_3
                [(lam fromBytes_4
                  [(lam main_1 main_1)
                    [validate_2
                      [toData_3
                        [(builtin mapData)
                          [[(force (builtin mkCons))
                            [[(builtin mkPairData) [(builtin bData) [fromBytes_4 (con bytestring #aa)]]]
                              [(builtin bData) [fromBytes_4 (con bytestring #bb)]]]]
                            (con (list (pair data data)) [])]]]]])
                  (lam value_12 value_12)])
                (lam coerce_11 coerce_11)])
              (lam value_5
                [(lam candidate_6
                  [[applyForward_7
                    [[applyForward_7 [[applyForward_7 candidate_6] (builtin unMapData)]]
                      [mapList_8 pairValidate_9]]]
                    (builtin mapData)])
                  [(lam coerce_10 coerce_10) value_5]])])
            (lam arg_22
              [(lam match_27
                (case
                  match_27
                  (lam field_28
                    (lam field_29
                      [(lam key_23
                        [(lam value_24
                          [[(builtin mkPairData) [validate_25 key_23]] [validate_26 value_24]])
                          field_29])
                        field_28]))))
                arg_22])])
          (lam value_34
            [(lam candidate_35
              [(lam destruct_36 candidate_35) [(builtin unBData) candidate_35]])
              [(lam coerce_37 coerce_37) value_34]])])
        (lam value_30
          [(lam candidate_31
            [(lam destruct_32 candidate_31) [(builtin unIData) candidate_31]])
            [(lam coerce_33 coerce_33) value_30]])])
      (lam f_15
        (lam values_16
          [[(lam self_38 [self_38 self_38])
            (lam self_38
              (lam values_16
                [(lam match_19
                  (case
                    match_19
                    (lam field_20
                      (lam field_21
                        [(lam first_17
                          [(lam rest_18
                            [[(force (builtin mkCons)) [f_15 first_17]] [[self_38 self_38] rest_18]])
                            field_21])
                          field_20]))
                    (con (list (pair data data)) [])))
                  values_16]))]
            values_16]))])
    (lam x_13 (lam f_14 [f_14 x_13]))])
--- optimized Core
let applyForward#40 : 'erased -> ('erased -> 'erased) -> 'erased = \x#38 : 'erased (f#39 : 'erased -> 'erased) -> f#39 x#38 in
let anf#81 : list (pair Data Data) = applyForward#40 (con data (Map [(B #aa, B #bb)])) unMapData in
let anf#82 : (list (pair Data Data) -> list (pair Data Data)) -> list (pair Data Data) = applyForward#40 anf#81 in
let anf#84 : list (pair Data Data) = anf#82 (\values#43 : list 'erased -> letrec
  worker#76 : list 'erased -> list (pair Data Data) [static []] = \values#75 : list 'erased -> case@List values#75 of
    Nil -> (con (list (pair data data)) [])
    Cons field#45 field#46 -> let anf#77 : pair Data Data = case@Pair field#45 of
      Pair field#61 field#62 -> let destruct#52 : int = unIData field#61 in
      let destruct#57 : bytes = unBData field#62 in
      mkPairData field#61 field#62 in
    let anf#78 : list (pair Data Data) = worker#76 field#46 in
    mkCons anf#77 anf#78
in
worker#76 values#43) in
applyForward#40 anf#84 mapData
--- optimized UPLC
(program 1.1.0
  [(lam builtin_22
    [(lam applyForward_5
      [(lam anf_6
        [(lam anf_7
          [(lam anf_21 [[applyForward_5 anf_21] (builtin mapData)])
            [anf_7
              (lam values_8
                [(lam worker_20 [worker_20 values_8])
                  [(lam self_9 [self_9 self_9])
                    (lam self_10
                      (lam values_11
                        (case
                          values_11
                          (lam field_12
                            (lam field_13
                              [(lam anf_18
                                [(lam anf_19 [[builtin_22 anf_18] anf_19]) [[self_10 self_10] field_13]])
                                (case
                                  field_12
                                  (lam field_14
                                    (lam field_15
                                      [(lam destruct_16
                                        [(lam destruct_17 [[(builtin mkPairData) field_14] field_15])
                                          [(builtin unBData) field_15]])
                                        [(builtin unIData) field_14]])))]))
                          (con (list (pair data data)) []))))]])]])
          [applyForward_5 anf_6]])
        [[applyForward_5 (con data (Map [(B #aa, B #bb)]))] (builtin unMapData)]])
      (lam x_3 (lam f_4 [f_4 x_3]))])
    (force (builtin mkCons))])
--- result
error: Runtime(MalFormedData(ByteString([170])))
--- logs
[]
--- budget
cpu: 199243, memory: 292
